Set padding on header, to avoid collision with collapse control

--- a/less/modules/mf-toggle.less
+++ b/less/modules/mf-toggle.less
@@ -14,6 +14,7 @@ Change-Id: I683d029d09340a460b02016c5c4fbd6ada5a9b35
 		background-position: right center;
 		background-repeat: no-repeat;
 		.background-size( auto, 9px );
+		padding-right: 18px;
 		cursor: pointer;
 
 		&.openSection {
